@@ -33,6 +33,7 @@ export("errlines")
 importFrom("stats", "quantile", "update", 
       "coef", "vcov", "confint")
 importFrom("coda", "as.mcmc.list")
+importFrom("utils", "stack")
 
 ## export methods for main dclone functions/classes
 export(dcsd.mcmc.list, 
@@ -54,7 +55,8 @@ export(dcsd.mcmc.list,
         nclones.list, 
         nclones.default, 
         pairs.mcmc.list, 
-        update.mcmc.list)
+        update.mcmc.list,
+        stack.mcmc.list)
 
 ## register methods for main dclone functions/classes
 S3method("nclones", "default")
@@ -70,6 +72,7 @@ S3method("extractdcdiag", "default")
 S3method("updated.model", "mcmc.list")
 S3method("updated.model", "mcmc.list.dc")
 S3method("update", "mcmc.list")
+S3method("stack", "mcmc.list")
 
 S3method("[", "mcmc.list.dc")
 S3method("coef", "mcmc")
